--- a/UniverseGame.Engine/UniverseGame.Engine.csproj
+++ b/UniverseGame.Engine/UniverseGame.Engine.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Floor.cs" />
     <Compile Include="IContainer.cs" />
     <Compile Include="IItem.cs" />
     <Compile Include="IPassable.cs" />
@@ -49,7 +50,9 @@
     <Compile Include="IUsable.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Surface.cs" />
     <Compile Include="Tile.cs" />
+    <Compile Include="Wall.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
